fix line-height at auth line on mobile

--- a/frontend/app/components/auth-panel/auth-panel.scss
+++ b/frontend/app/components/auth-panel/auth-panel.scss
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: space-between;
   font-size: 14px;
-  line-height: 24px;
+  line-height: 16px;
   align-items: baseline;
+  padding: 2px 0;
 }
